--- a/test_resources/test_user_agent_parser.yaml
+++ b/test_resources/test_user_agent_parser.yaml
@@ -1316,12 +1316,6 @@ test_cases:
     patch:
     patch_minor:
 
-  - user_agent_string: 'Mozilla/5.0 (Windows NT 6.1; Win64; x64; Trident/7.0; rv:11.0) like Gecko/20100101 Firefox/12.0'
-    family: 'IE'
-    major: '11'
-    minor: '0'
-    patch:
-
   - user_agent_string: 'Mozilla/4.0 (Vodafone/1.0/LG-GU280/v10a Browser/Obigo-Q7.3 MMS/LG-MMS-V1.0/1.2 Java/ASVM/1.1 Profile/MIDP-2.1 Configuration/CLDC-1.1)'
     family: 'Obigo'
     major: '7'
@@ -1441,44 +1435,66 @@ test_cases:
     patch:
     patch_minor:
 
-  - user_agent_string: 'MQQBrowser/39 Mozilla/5.0 (iPhone 4S; CPU iPhone OS 6_0_1 like Mac OS X) AppleWebKit/536.26 (KHTML, like Gecko) Mobile/10A523 Safari/7534.48.3'
-    family: 'QQ Browser Mobile'
-    major: '39'
-    minor:
+  - user_agent_string: 'Dolphin 6.5.1 (iPad; iPhone OS 6.1.3; de_DE)'
+    family: 'Dolphin'
+    major: '6'
+    minor: '5'
+    patch: '1'
+    patch_minor:
+
+  - user_agent_string: 'Dolphin 7.4 (iPhone; iPhone OS 7.0.2; de_DE)'
+    family: 'Dolphin'
+    major: '7'
+    minor: '4'
     patch:
     patch_minor:
 
-  - user_agent_string: 'MQQBrowser/391 Mozilla/5.0 (iPhone 4S; CPU iPhone OS 5_0 like Mac OS X) AppleWebKit/534.46 (KHTML, like Gecko) Mobile/9A334 Safari/7534.48.3'
-    family: 'QQ Browser Mobile'
-    major: '391'
-    minor:
-    patch:
+  - user_agent_string: 'Dolphin 7.5.1 (iPhone; iPhone OS 7.0.3; de_DE)'
+    family: 'Dolphin'
+    major: '7'
+    minor: '5'
+    patch: '1'
     patch_minor:
 
-  - user_agent_string: 'MQQBrowser/20 (Linux; U; 2.3.3; en-us; HTC Desire S Build/GRI40;480*800)'
-    family: 'QQ Browser Mobile'
-    major: '20'
-    minor:
-    patch:
+  - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 2.1-update1; zh-cn; XT701 Build/STCU_31.05.4) AppleWebKit/530.17 (KHTML, like Gecko) Version/4.0 Mobile Safari/530.17 DolphinHDCN/7.0.1'
+    family: 'Dolphin'
+    major: '7'
+    minor: '0'
+    patch: '1'
     patch_minor:
 
-  - user_agent_string: 'MQQBrowser/Mini2.8 (ZTE-X990/X990_V2_Z12_ESFR_D18F100)'
-    family: 'QQ Browser Mini'
-    major: '2'
-    minor: '8'
-    patch:
+  - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 2.2; en-gb; GT-P1000 Build/FROYO) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1 DolphinHDCN/6.3.1'
+    family: 'Dolphin'
+    major: '6'
+    minor: '3'
+    patch: '1'
     patch_minor:
 
-  - user_agent_string: 'MQQBrowser/Mini3.1 (SonyEricssonJ105i/R1HA035)'
-    family: 'QQ Browser Mini'
-    major: '3'
+  - user_agent_string: 'Mozilla/5.0 (Linux; U; Android 4.1.1; en-us; Nexus 7 Build/JRO03D) AppleWebKit/534.30 (KHTML, like Gecko) Dolphin/INT-1.0.4 Mobile Safari/534.30'
+    family: 'Dolphin'
+    major: '1'
+    minor: '0'
+    patch: '4'
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_6_3; en-us) AppleWebKit/533.16 (KHTML, like Gecko) Version/5.0 Safari/533.16 DolphinHDCN/6.1.0'
+    family: 'Dolphin'
+    major: '6'
     minor: '1'
+    patch: '0'
+    patch_minor:
+
+  - user_agent_string: 'Mozilla/5.0(miniGUI/3.x; U; Linux i686; en-US) AppleWebKit/534.26 (KHTML, like Gecko) mDolphin/3.0 chrome/10.0 Safria/534.26'
+    family: 'mDolphin'
+    major: '3'
+    minor: '0'
     patch:
     patch_minor:
 
-  - user_agent_string: 'QQBrowser/14 (Linux; U; 2.2.2; en-us; Motorola XT316 BUILD/FRG83G) Mobile/0050'
-    family: 'QQ Browser'
-    major: '14'
-    minor:
-    patch:
+  - user_agent_string: 'Mozilla/5.0(miniGUI/3.x; U; Linux i686; en; ) AppleWebKit/533.9.0 (KHTML, like Gecko) mDolphin/3.0.0 Safria/533.9.0'
+    family: 'mDolphin'
+    major: '3'
+    minor: '0'
+    patch: '0'
     patch_minor:
+
